<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:src="@drawable/logo" />
    
      
   <Button
       android:id="@+id/buttonlogin"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/logo"
       android:layout_marginTop="62dp"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="62dp"
       android:text="@string/buttonlogin" 
       android:onClick="onClickStartButtons" />
            
   <Button
     android:id="@+id/buttoncarpool"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/buttonlogin"
     android:layout_marginBottom="62dp"
     android:text="@string/buttoncarpool" 
     android:onClick="onClickStartButtons" />
     
   <Button
     android:id="@+id/buttonhirenow"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/buttoncarpool"
     android:layout_marginBottom="62dp"
     android:text="@string/buttonhirenow"
     android:onClick="onClickStartButtons"  />
   
</RelativeLayout>