<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/white">

    <TableLayout
            android:layout_marginTop="25dp"
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="25dip"
            android:stretchColumns="1">

        <TableRow
                android:layout_marginTop="50dp"
                android:paddingBottom="5dp">

            <TextView
                    android:gravity="right"
                    android:paddingRight="10dip"
                    android:text="@string/stringlogin"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            <EditText
                    android:id="@+id/edit_login"
                    android:layout_width="fill_parent"                    
                    android:inputType="text"/>
        </TableRow>

        <TableRow android:paddingBottom="5dip">

            <TextView
                    android:gravity="right"
                    android:paddingRight="10dip"
                    android:text="@string/stringpassword"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            <EditText
                    android:id="@+id/edit_password"                    
                    android:inputType="textPassword"/>
        </TableRow>
    </TableLayout>

    <Button
            android:id="@+id/signInViaFacebook"
            android:background="@drawable/button_sign_in_with_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_below="@id/tableLayout1"
            android:onClick="onClickButtons"/>

    <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"            
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="25dp"
            android:padding="15dp"
            android:text="@string/registerButton"
            android:onClick="onClickButtons"/>

    

    <ProgressBar
            android:id="@+id/queryLogin_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/registerButton"
            style="?android:attr/progressBarStyleInverse"
            android:layout_centerHorizontal="true" android:visibility="gone"/>

</RelativeLayout>